@@ -3,6 +3,9 @@ devel:
 - added param -pai for P-Asserted-Identity 
 - sipsend: added param --local_port to force local port
 - sipinvite: added param --local_port to force local port
+- sipexten: 
+  - added param -ofile to save results
+  - added param -f to filter response code
 v3.3 (Nov/2022):
 - sipflood: 
   - added param -th to allow threads
